[tool.poetry]
name = "Session Generator"
version = "0.1.0"
description = "Generate Pyrogram Session String and send it to Saved Messages of your Telegram account"
authors = ["TamilBots <GitHub.com/ivetri>"]

[tool.poetry.dependencies]
python = "^3.8"
Telethon = "^1.22.0"
Pyrogram = "^1.2.9"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.code.masonry.api"
